src/cli/renderer/snapshots/thndrs_core__renderer__transcript__tests__transcript_assistant_text_narrow.snap
---
source: src/cli/renderer/transcript/tests.rs
assertion_line: 27
expression: contents
---
│                                           # [bg=#171928]=                                        
│   Agent                                   # [bg=#171928]=   [fg=#37f499 bg=#171928 b]=Agent [bg=#171928]=                                [bg=#171928]=  
│   Sure! I can help with that. Let me      # [bg=#171928]=   [fg=#ebfafa bg=#171928]=Sure! I can help with that. Let me [bg=#171928]=   [bg=#171928]=  
│   take a look.                            # [bg=#171928]=   [fg=#ebfafa bg=#171928]=take a look. [bg=#171928]=                         [bg=#171928]=
