src/cli/renderer/snapshots/thndrs_core__renderer__transcript__tests__transcript_error_message_normal.snap
---
source: src/cli/renderer/transcript/tests.rs
assertion_line: 27
expression: contents
---
│                                                                                   # [bg=#171928]=                                                                                
│   ⚠ Error                                                                         # [bg=#171928]=   [fg=#f16c75 bg=#171928 b]=⚠ Error [bg=#171928]=                                                                      [bg=#171928]=  
│   Provider request failed: connection refused                                     # [bg=#171928]=   [fg=#ebfafa bg=#171928]=Provider request failed: connection refused [bg=#171928]=                                  [bg=#171928]=
